--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Bluetooth Clone</string>
-    <string name="startScan">Start Scan Devices</string>
+    <string name="startScan">Start Scanning Device</string>
     <string name="stopScan">Stop Scan Devices</string>
     <string name="connectedDevice">Show Connect Device</string>
     <string name="devicename">"Devicename : "</string>
